--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "omoide-backend",
+  "name": "apify-backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "bcrypt": "^5.1.1",
     "mongoose": "^7.5.0",
+    "nodemailer": "^6.9.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
